# MatchEngine

./: CMakeLists.txt  README.md  main.cpp
Shaders/: Simple.frag  Simple.frag.spv  Simple.vert  Simple.vert.spv  compileShaders.bat
source/: UniformBufferObject.hpp  Vertex.hpp
source/App/: MEApp.cpp  MEApp.hpp
source/CommandBuffer/: MECommandBuffer.cpp  MECommandBuffer.hpp  MECommandPool.cpp  MECommandPool.hpp
source/Device/: MEDevice.cpp  MEDevice.hpp  MESwapChain.cpp  MESwapChain.hpp
source/Image/: MEImage.cpp  MEImage.hpp
source/Pipeline/: MEPipeline.cpp  MEPipeline.hpp
source/Swapchain/: MESwapchain.cpp  MESwapchain.hpp
source/Window/: MEWindow.cpp  MEWindow.hpp
source/core/: Vertex.hpp
source/core/private/: MEApp.cpp  MECommandBuffer.cpp  MECommandPool.cpp  MEDescriptorPool.cpp  MEDevice.cpp  MEImage.cpp  MEModel.cpp  MEPipeline.cpp  MESwapchain.cpp  METexture.cpp  MEWindow.cpp
source/core/public/: MEApp.hpp  MECommandBuffer.hpp  MEDescriptorPool.hpp  MEDevice.hpp  MEImage.hpp  MEModel.hpp  MEPipeline.hpp  MESwapchain.hpp  METexture.hpp
